Add live checkbox 2025-07-02
New: Add ButtonGroup. Add Live checkboxes. Show 3 separate checkboxes
(live, deceased, or buried) in All Citizens tab in Monitor Tool
Fix: Correct logics in setSettlementFilter() in PersonTableModel to
filter citizens into 3 categories: live, deceased, or buried

Related to https://github.com/mars-sim/mars-sim/issues/1597